syntax = "proto3";

package goph.keeper.v1;
option go_package = "github.com/alkurbatov/goph-keeper/goph";

message RegisterUserRequest {
  string username = 1; // Name of a user.
  string security_key = 2; // Hashed encryption key generated by client.
}

message RegisterUserResponse {
  string user_id = 1; // Unique user ID in UUIDv4 form.
  string access_token = 2; // JWT access token.
}

service Users {
  // Register new user.
  rpc Register(RegisterUserRequest) returns (RegisterUserResponse);
}
